--- a/index.html
+++ b/index.html
@@ -78,10 +78,15 @@
     
 
 
-     <div id="loadPage" class="position-fixed  top-50  text-center d-none">
+     <div id="loadPage" class="position-fixed  mt-5  text-center d-none d-flex justify-content-center align-items-center">
+      <i class="fa-solid fa-spinner fa-spin fa-spin-reverse text-white "></i>
+    </div>
+    
+     <div id="loadPages" class="position-fixed  top-0 start-0 bottom-0 end-0 w-100  text-center d-none d-flex justify-content-center align-items-center">
       <i class="fa-solid fa-spinner fa-spin fa-spin-reverse text-white "></i>
 
     </div>
+
 
 
 
